--- a/exactoSD.ioc
+++ b/exactoSD.ioc
@@ -29,8 +29,9 @@ Dma.SDMMC1_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SDMMC1_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.SDMMC1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 FATFS.BSP.number=1
-FATFS.IPParameters=USE_DMA_CODE_SD
+FATFS.IPParameters=USE_DMA_CODE_SD,_USE_FIND
 FATFS.USE_DMA_CODE_SD=1
+FATFS._USE_FIND=1
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
 FATFS0.BSP.component=
